task1/test_results_defects/infer_test/deletion_of_data_structure_sentinel/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/deletion_of_data_structure_sentinel.c:25: error: Null Dereference
  pointer `foo` last assigned on line 22 could be null and is dereferenced at line 25, column 3.
  23. 	for(counter=0;counter<10;counter++)
  24. 	{
  25. 		foo[counter]='a'; /*Tool should detect this line as error*/ /*ERROR:Deletion of a data structure sentinel*/
        ^
  26. 	}
  27. 	free(foo);

Found 1 issue
          Issue Type(ISSUED_TYPE_ID): #
  Null Dereference(NULL_DEREFERENCE): 1
